Bug 66165 - FILEOPEN: WW8 export: spurious blank lines added below hyperlinks
Summary: FILEOPEN: WW8 export: spurious blank lines added below hyperlinks
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.3.3 release
Hardware: Other Windows (All)
: medium normal
Assignee: Michael Stahl (allotropia)
URL:
Whiteboard: BSA target:4.2.0 target:4.1.0.2 targe...
Keywords: regression
: 64989 65302 66361 67761 68817 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-06-25 17:12 UTC by HOUARD guillaume
Modified: 2013-09-02 10:42 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments
To this file there are 2 links, one mail and one website to test (94.50 KB, application/msword)
2013-06-25 17:12 UTC, HOUARD guillaume
Details

Note You need to log in before you can comment on or make changes to this bug.
Description HOUARD guillaume 2013-06-25 17:12:01 UTC
Created attachment 81420 [details]
To this file there are 2 links, one mail and one website to test

Problem description: 
When i open a writer contening links inside a new line is added under those links.

So everytime you open a writer document, edit it and save it a new line is added under the links. So if you do that 10 times, 10 new lines are added.

Steps to reproduce:
1. open a writer document
2. change something
3. Save it
4. Do the 3 steps again

Current behavior:
Added a new line under links (Mail and/or Website)

Expected behavior: Shouldn't adding lines under links

              
Operating System: Windows 7
Version: 4.0.0.3 release
Last worked in: 4.0.4.2 release
Comment 1 Pedro 2013-06-25 22:29:20 UTC
Confirmed using LO 4.1.0.1 under Windows XP.

I also confirm that this is a regression. Does not occur under LO 3.6.6.2

Finally, saving as ODT or DOCX solves the problem so this problem seems to be related with the export to Word DOC only
Comment 2 Michael Stahl (allotropia) 2013-07-01 16:42:22 UTC
worked in 4.0.2.2 broken in 4.0.3.3

regression from commit fe4e05f4d161e7366e251e3e6470af8967100ca6
Comment 3 Michael Stahl (allotropia) 2013-07-01 17:13:17 UTC
figured out what happened, a context line "WriteCR( pTextNodeInfoInner );"
was erroneously _added_ in 83ba821c10392c08334f7d8d3775fe3e8d08f8fd
so we got 2 WriteCRs there
Comment 4 Commit Notification 2013-07-01 17:17:57 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a201ae63ce798438057a1328dc644dc8b64fe4e8

fdo#66165: WW8 export: fix duplicated paragraph breaks



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Michael Stahl (allotropia) 2013-07-01 20:05:29 UTC
*** Bug 64989 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2013-07-02 07:18:54 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=235a543619d74f024087983cee35e4f03e5993b0&h=libreoffice-4-1

fdo#66165: WW8 export: fix duplicated paragraph breaks


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2013-07-02 07:19:13 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2a36c1fb1b5d33b49444deb465c861bb1850732b&h=libreoffice-4-0

fdo#66165: WW8 export: fix duplicated paragraph breaks


It will be available in LibreOffice 4.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Aurimas Fišeras 2013-07-03 14:11:38 UTC
*** Bug 66361 has been marked as a duplicate of this bug. ***
Comment 9 ign_christian 2013-07-04 03:26:10 UTC
*** Bug 65302 has been marked as a duplicate of this bug. ***
Comment 10 Cor Nouws 2013-08-05 06:49:15 UTC
*** Bug 67761 has been marked as a duplicate of this bug. ***
Comment 11 Maxim Monastirsky 2013-09-02 10:42:47 UTC
*** Bug 68817 has been marked as a duplicate of this bug. ***