fdo#66165: WW8 export: fix duplicated paragraph breaks

MSWordExportBase::OutputTextNode(): in commit
8f2a21eac4a904db3cc4c448179e2d2cf5878ef4
(which is not merged) a "WriteCR( pTextNodeInfoInner );" was moved up
a few lines, so it shows up as context in the other commit, and
the bug is that the cherry-pick 83ba821c10392c08334f7d8d3775fe3e8d08f8fd
erroneously adds this context line so now there are 2 WriteCR().

Change-Id: I08434b284f3d8d8426fa997623be352c37d6c7c2